# news-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRESENTATION.md  README.md  SECURITY.md  demo.py  fetch_news.py  generate_demo_gif.py  marketing_demo.py  news_responder_gui.py  news_sheet_comment_responder.py  process_news_in.py  pyproject.toml  requirements.txt  showcase.py
.github/workflows/: ci.yml
assets/: demo.cast  marketing_demo.cast
examples/: sample_articles.json
sample_output/: analysis_report.json
tests/: __init__.py  test_scoring.py
